# canompx3

./: .aiderignore  .canompx3-worktree.json  .claudeignore  .code-review-graphignore  .coverage  .env.example  .gitattributes  .gitignore  .m25_pending_review  .mcp.json  AGENTS.md  APEX_PHASE1_SUMMARY.txt  AUDIT_FINDINGS.md  CANONICAL_LOGIC.txt  CANONICAL_backfill_dbn_mgc_rules.txt  CANONICAL_backfill_dbn_mgc_rules_addon.txt  CHANGELOG.md  CHATGPT_BUNDLE_HANDOFF.md  CHATGPT_PROJECT_INSTRUCTIONS.md  CLAUDE.md  CODEX.md  COMMIT_MSG.txt  CONFLUENCE_RESEARCH_PROGRAM.md  CONVENTIONS.md  CRYPTO_EDGE_RESEARCH_CATALOG.md  GOLD_DB_AUDIT_2026-03-19.txt  HANDOFF-2A3.md  HANDOFF.md  HANDOFF_E2_CANONICAL_FIX.md  HANDOVER.md  HANDOVER_2026-04-20-perf-sweep.md  HONESTY_AUDIT_RESULTS.md  MARKET_PLAYBOOK.md  MEMORY.md  NEXT_TODO.md  NORTH_STAR.md  PHASE3_PLAN.md  PIPELINE_AUDIT_2026-02-25.md  PIPELINE_AUDIT_2026-02-27.md  PLAN_codex.md  (+67 more)
.audit/: 01_session_map.py  02_coverage.py  03_events.py  04_dst_integrity.py  05_edge.py  06_survivors.py  _costs.py  _holdout.py  _probe2.py
.claude/: settings.json
.cloudflared/: config.yml
.codex/: AGENTS.md  AUTHORITY.md  AUTOMATIONS.md  CANONICAL_DRIFT_SWEEP.md  CODEX_IMPROVEMENT_PLAN.md  COMMANDS.md  CURRENT_STATE.md  HOOKS.md  INTEGRATIONS.md  MEMORY.md  NEXT_STEPS.md  OPENAI_CODEX_STANDARDS.md  PLUGIN_ROUTING.md  PROJECT_BRIEF.md  RULES.md  STARTUP.md  TARGETED_GROUNDING.md  WORKFLOWS.md  WORKSPACE_MAP.md  config.toml
.githooks/: commit-msg  post-commit  pre-commit  pre-push
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.streamlit/: config.toml
artifacts/: 1800_composite_validation.txt  1800_workhorse_validation.txt  EARLY_EXIT_RULES.md  TRADE_MANAGEMENT_RULES.md  asia_session_analysis_2025.txt  concretum_bands_results.json  cross_validation_results.json  gap_fade_results.json  gap_fade_wf_results.json  overlay_filter_comparison.json  regime_2025_only_comparison.csv  value_area_results.json  vwap_results.json
chatgpt-project-kit/: PROJECT_INSTRUCTIONS.md  PROJECT_REFERENCE.md  README.md  RESEARCH_RULES.md  TRADING_RULES.md
chatgpt_bundle/: 00_INDEX.md  01_OPERATING_RULES.md  02_USER_PROFILE.md  04_DECISION_LOG.md  06_RD_GRAVEYARD.md  07_PLAYBOOKS.md  CANONICAL_VALUES.md  LIT_aronson_2007_ebta_data_snooping.md  LIT_bailey_lopez_2014_deflated_sharpe.md  LIT_chan_2013_ch1_backtesting_invariant.md  LIT_fitschen_2013_orb_premise.md  LIT_harris_2002_microstructure.md  LIT_harvey_liu_2015_backtesting_haircut.md  LIT_howard_2026_value_area_breakouts_es.md  LIT_lopez_2020_ml_asset_managers.md  LIT_lopez_de_prado_2018_afml.md  RESEARCH_RULES.md  STRATEGY_BLUEPRINT.md  TRADING_RULES.md  _BUNDLE_README.md  backtesting-methodology.md  mechanism_priors.md  pre_registered_criteria.md
chatgpt_bundle_optional/: ARCHITECTURE.md  LIT_chan_2008_ch7_regime_switching.md  LIT_lopez_bailey_2018_false_strategy.md  daily-features-joins.md  institutional-rigor.md  institutional_README.md  quant-audit-protocol.md  regime-and-rr-handling-framework.md
configs/: canompx3-crg-eval.yaml
context/: __init__.py  institutional.py  registry.py
docs/: ARCHITECTURE.md  BREAD_AND_BUTTER_REFERENCE.md  DOW_ALIGNMENT.md  DST_CONTAMINATION.md  INDEX.md  MARKET_PROFILE_FEATURES_SPEC.md  MONOREPO_ARCHITECTURE.md  PINECONE_INTEGRATION.md  PINE_V6_INDICATOR_SPEC.md  RESEARCH_ARCHIVE.md  STRATEGY_BLUEPRINT.md  STRATEGY_DISCOVERY_AUDIT.md  TRADING_PSYCHOLOGY_FRAMEWORKS.md  claude-code-standards.md  trading_psychology_wisdom.md
logs/: integrity_before.json  ml_v2_retrain_results.json
mf_futures/: __init__.py  carry.py  config.py  contracts.py  expiry.py  kernel.py  models.py  research.py  snapshot.py
oldscripts/: ARCHIVE_backtest_rules1.txt  ARCHIVE_backtestfix.txt  ARCHIVE_ingest_dbn_mgc_v1.py  ARCHIVEbackfill_audit1.py
outputs/: negative_space_heatmap.csv  phase_b_calibration_probe.json  session_state.json  session_trial_ledger.md
pipeline/: _drift_cache.py  _dsr_policy.py  asset_configs.py  audit_bars_coverage.py  audit_log.py  backfill_pit_range_atr.py  build_bars_5m.py  build_daily_features.py  calendar_filters.py  canonical_inline_copies.py  check_db.py  check_drift.py  check_drift_crg_helpers.py  cost_model.py  daily_backfill.py  dashboard.py  data_era.py  db_config.py  db_connect.py  db_contracts.py  db_lock.py  dst.py  export_parquet.py  health_check.py  ingest_dbn.py  ingest_dbn_daily.py  ingest_dbn_mgc.py  ingest_statistics.py  init_db.py  log.py  market_calendar.py  paths.py  run_full_pipeline.py  run_pipeline.py  runtime_snapshot.py  session_guard.py  startup_index.py  stats.py  system_authority.py  system_brief.py  (+4 more)
prompts/: trading_app_cohesion_audit.md
research/: 2026-04-29-parked-pathway-b-additivity-audit.py  _alt_strategy_utils.py  adaptive_stops_h0_symmetry_diagnostic.py  adaptive_stops_h4_time_exit_paired.py  allocator_scarcity_surface_audit.py  allocator_scored_tail_audit.py  analyze_1100_conditional.py  analyze_1100_ib_alignment.py  analyze_1100_zero_lookahead.py  analyze_2300_recent.py  analyze_adx_filter.py  analyze_concretum_bands.py  analyze_double_break.py  analyze_early_exits.py  analyze_entry_clearance.py  analyze_eod_exits.py  analyze_first_half_hour.py  analyze_gap_fade.py  analyze_ib_alignment_v2.py  analyze_ib_direction_alignment.py  analyze_ib_single_break.py  analyze_mcl_comprehensive.py  analyze_mcl_nymex.py  analyze_mfe_distribution.py  analyze_mfe_recent.py  analyze_mgc_15m_orb.py  analyze_mnq_1800.py  analyze_multiday_trend.py  (+379 more)
(+10177 files in other folders)
