[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "canompx3"
version = "0.1.0"
requires-python = ">=3.13"

[tool.setuptools.packages.find]
include = ["pipeline*", "trading_app*", "scripts*", "research*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short -n auto --dist loadscope"
norecursedirs = ["local_db", ".venv", "DB", "*.egg-info"]
