[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "canompx3"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "databento>=0.70.0",
    "duckdb>=1.4.4",
    "pandas>=2.3.3",
    "numpy>=2.2.6",
    "pyarrow>=23.0.0",
    "zstandard>=0.25.0",
    "arch>=8.0.0",
    "websockets>=14.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.0.0",
    "streamlit>=1.33.0",
    "plotly>=5.0.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "pysignalr>=1.3.0",
    "sse-starlette>=3.3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.1.1",
    "ruff>=0.15.0",
    "pyright>=1.1.400",
    "pip-audit>=2.7.0",
]

[tool.setuptools.packages.find]
include = ["pipeline*", "trading_app*", "scripts*", "research*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
norecursedirs = ["local_db", ".venv", "DB", "*.egg-info"]

[dependency-groups]
dev = [
    "pandas-stubs>=3.0.0.260204",
]
