[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "canompx3"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "databento>=0.70.0",
    "duckdb>=1.4.4",
    "pandas>=2.3.3",
    "numpy>=2.2.6",
    "pyarrow>=23.0.0",
    "zstandard>=0.25.0",
    "arch>=8.0.0",
    "websockets>=14.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.0.0",
    "streamlit>=1.33.0",
    "plotly>=5.0.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "pysignalr>=1.3.0",
    "signalrcore>=0.9.0",
    "tzdata>=2024.1",
    "sse-starlette>=3.3.2",
    "rich>=14.3.3",
    "readchar>=4.2.1",
    "pyyaml>=6.0",
    "pymupdf>=1.27.2.2",
    "exchange-calendars>=4.13.0",
    "anthropic>=0.92.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    # pytest-cov pinned <7 — 7.0.0 (2025-09-09) interacts with pluggy/_pytest
    # capture-manager on GH-hosted Windows runner to produce KeyboardInterrupt
    # mid-suite (n=20+ red runs 2026-05-22 → 2026-05-25). See
    # `memory/feedback_ci_keyboardinterrupt_test_session_start_mutex_external_kill.md`.
    "pytest-cov>=6.1.1,<7",
    "pytest-timeout>=2.3.1",
    "httpx>=0.27.0",
    "ruff>=0.15.0",
    "pyright>=1.1.400",
    "pip-audit>=2.7.0",
]

[tool.setuptools.packages.find]
include = ["pipeline*", "trading_app*", "scripts*", "research*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: long-running integration or subprocess checks kept out of pre-commit and quick audit paths",
    "timeout: per-test timeout marker used when pytest-timeout is installed",
]
asyncio_mode = "auto"
norecursedirs = ["local_db", ".venv", "DB", "*.egg-info"]
# pytest-timeout: convert silent SIGINT / hangs on GH-hosted Windows runners
# into a per-test stack trace at the hang site. `thread` method is the
# Windows-compatible choice (SIGALRM is POSIX-only); on hit, the watchdog
# thread dumps all thread stacks then `os._exit(1)`.
#
# 120s default: chosen empirically to accommodate the slowest legitimate
# test on Windows under coverage instrumentation (`test_integration_l1_l2.py`
# multi-instrument fixtures run L1+L2 pipeline twice ≈ 60-110s on
# GH-hosted runners). Sub-60s tests still benefit from the watchdog —
# any genuine hang produces a stack trace at 120s instead of silent SIGINT.
# Individual fast tests can override via `@pytest.mark.timeout(N)` if
# tighter bounds are desired.
# Reference: https://pypi.org/project/pytest-timeout/
timeout = 120
timeout_method = "thread"
# Only time test-function execution, NOT setup/teardown/inter-module transitions.
# Without this, pytest-timeout 2.4.0's watchdog can fire during pytest 9.0.2's
# capture-manager teardown gap and crash on `_pytest/capture.py:802: assert
# self._global_capturing is not None`. Observed on GH-hosted Windows runners
# after test_session_start_mutex module completed cleanly (6 passed, then
# KeyboardInterrupt from the timer thread). Ref: https://pypi.org/project/pytest-timeout/#timeout-func-only
timeout_func_only = true

[dependency-groups]
dev = [
    "pandas-stubs>=3.0.0.260204",
    {include-group = "test"},
]
test = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.1.1,<7",
    "pytest-timeout>=2.3.1",
    "httpx>=0.27.0",
    "ruff>=0.15.0",
    "pyright>=1.1.400",
    "pip-audit>=2.7.0",
]

[tool.uv]
default-groups = ["dev"]
